changed calendar to sheduler

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,11 +25,12 @@
 
 .calender{
   width: 60%;
-  height: 400px;
+  height: 450px;
   display: inline-block;
   vertical-align: top;
   margin-left: 5%;
   border: 1px solid black;
+  overflow: scroll;
 }
 
 .leftside{
