--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.logo {
+  width: 15%;
+}
+
+.container {
+  width : 980px;
+}
+
+.nav-logo {
+  width: 55%;
+  border-radius: 15px;
+  /* margin-right: 100px; */
+}
+
+.travel-warning {
+  margin: 10px 0;
+}
+
+.main-login {
+  margin: auto;
+  height: 1000px;
+  /* max-width: 100%; */
+  /* object-fit: scale-down; */
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(../src/images/airplane.png);
+}
+
+.login-box {
+  justify-content: right;
+  margin-top: 100px;
+  background-color: aliceblue;
+  border-radius: 10px;
+}
+
+
